# okfy

./: .gitignore  README.md
.claude-plugin/: marketplace.json
adapters/mcp/: README.md  pyproject.toml
adapters/mcp/src/okfy_mcp/: __main__.py  config.py  handlers.py  resolve.py  server.py
core/: pyproject.toml
core/src/okfy/: archetype.py  bm25.py  bundle.py  cli.py  cluster.py  crosswalk.py  evaluation.py  export_fusion.py  federate.py  frontmatter.py  guard.py  index.py  init.py  job.py  ledger.py  lexicon.py  package.py  proposals.py  query.py  release.py  repair.py  segment.py  update.py  validate.py  workspace.py
core/src/okfy/archetypes/api-reference/: archetype.yaml
core/src/okfy/archetypes/api-reference/protocols/: agents.tmpl
core/src/okfy/archetypes/api-reference/templates/: contract.md  operation.md  recipe.md  topic.md  type.md
core/src/okfy/archetypes/codebase-map/: archetype.yaml
core/src/okfy/archetypes/codebase-map/protocols/: agents.tmpl
core/src/okfy/archetypes/codebase-map/templates/: convention.md  data-model.md  decision.md  flow.md  module.md
core/src/okfy/archetypes/decision-support/: archetype.yaml
core/src/okfy/archetypes/decision-support/protocols/: agents.tmpl
core/src/okfy/archetypes/decision-support/templates/: glossary-term.md  market-regime.md  playbook.md  risk-factor.md  strategy.md
core/src/okfy/archetypes/research-synthesis/: archetype.yaml
core/src/okfy/archetypes/research-synthesis/protocols/: agents.tmpl
core/src/okfy/commands/: __init__.py  bundle.py  common.py  corpus.py  quality.py  retrieval.py  review.py  workspace.py
core/src/okfy/templates/: workspace-agents.tmpl
(+18 files in other folders)
