[project]
name = "okfy"
version = "0.5.0"
description = "Purpose-shaped OKF knowledge bundles: extraction at scale, deterministic retrieval"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.scripts]
okfy = "okfy.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okfy"]

[tool.ruff.lint.per-file-ignores]
# cli.py uses an intentional one-line `parser = ...; parser.add_argument(...)`
# subcommand-dispatch style; the compact table is easier to scan than E702-clean.
"src/okfy/cli.py" = ["E702"]
# Tests interleave local helper defs (write, git_corpus, ws_of, run_cli) with
# imports that depend on them or on prior tasks' modules; E402 is expected there.
"tests/*" = ["E402"]
