[project]
name = "okfy-mcp"
version = "0.5.0"
description = "MCP stdio adapter for OKFy knowledge bundles"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["okfy", "mcp>=1.28,<2"]

[project.scripts]
okfy-mcp = "okfy_mcp.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
okfy = { path = "../../core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okfy_mcp"]

[tool.ruff.lint.per-file-ignores]
# Tests interleave local helper defs with imports that depend on them; matches
# the core package's convention.
"tests/*" = ["E402"]
